# project3

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: BitIO.cpp  BitIO.h  Compressor.cpp  Compressor.h  DCTCodec.cpp  DCTCodec.h  Decompressor.cpp  Decompressor.h  Huffman.cpp  Huffman.h  ImageData.cpp  ImageData.h  LZW.cpp  LZW.h  RLE.cpp  RLE.h
src/gui/: main.cpp  mainwindow.cpp  mainwindow.h
